--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
     "start": "next start"
   },
   "dependencies": {
-    "axios": "^0.26.1",
+    "@mdx-js/loader": "^2.1.0",
+    "@tanstack/react-query": "^4.3.1",
+    "axios": "^0.27.2",
     "next": "latest",
+    "qs": "^6.11.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
-    "react-query": "^3.34.16"
+    "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
+    "@types/qs": "^6.9.7",
     "@types/react": "17.0.38",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.5",
