--- a/package.json
+++ b/package.json
@@ -1,30 +1,30 @@
 {
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "@mdx-js/loader": "^2.1.0",
-    "@tanstack/react-query": "^4.3.1",
-    "axios": "^0.27.2",
-    "next": "latest",
-    "qs": "^6.11.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1",
-    "react-syntax-highlighter": "^15.5.0"
-  },
-  "devDependencies": {
-    "@types/node": "17.0.4",
-    "@types/qs": "^6.9.7",
-    "@types/react": "17.0.38",
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.5",
-    "prettier": "^2.5.1",
-    "prettier-plugin-tailwindcss": "^0.1.1",
-    "tailwindcss": "^3.0.7",
-    "typescript": "4.5.4"
-  }
+	"private": true,
+	"scripts": {
+		"dev": "next dev -p 3001",
+		"build": "next build",
+		"start": "next start -p 3001"
+	},
+	"dependencies": {
+		"@mdx-js/loader": "^2.1.0",
+		"@tanstack/react-query": "^4.3.1",
+		"axios": "^0.27.2",
+		"next": "latest",
+		"qs": "^6.11.0",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
+		"react-icons": "^4.3.1",
+		"react-syntax-highlighter": "^15.5.0"
+	},
+	"devDependencies": {
+		"@types/node": "17.0.4",
+		"@types/qs": "^6.9.7",
+		"@types/react": "17.0.38",
+		"autoprefixer": "^10.4.0",
+		"postcss": "^8.4.5",
+		"prettier": "^2.5.1",
+		"prettier-plugin-tailwindcss": "^0.1.1",
+		"tailwindcss": "^3.0.7",
+		"typescript": "4.5.4"
+	}
 }
