--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"@mdx-js/loader": "^2.1.0",
 		"@tanstack/react-query": "^4.3.1",
 		"axios": "^0.27.2",
-		"next": "latest",
+		"next": "^13.5.2",
+		"posthog-js": "^1.79.0",
 		"qs": "^6.11.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
